--- a/vloerverwarming/index.html
+++ b/vloerverwarming/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Thuis Server - Administration</title>
+  <title>Eef's Vloerverwarming 2025</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
+    a { font-size: 12pt;}
   </style>
 </head>
 <body>
@@ -12,3 +14,4 @@
 
 </body>
 </html>
+
